# hiking-trails-api

./: .vercelignore  Dockerfile  Procfile  README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: django.yml
data/db/: postmaster.pid
data/db/base/13757/: pg_internal.init
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_13757.stat  global.stat
data/db/pg_stat_tmp/: db_0.stat  db_13757.stat  global.stat
hiking_trails_api/: admin.py  apps.py  models.py  permissions.py  scraper.py  serializers.py  tests.py  urls.py  views.py
hiking_trails_api/migrations/: 0001_initial.py  0002_rename_all_trails_link_hikingtrails_wta_link_and_more.py
hiking_trails_api_project/: .gitignore  asgi.py  forms.py  settings.py  urls.py  wsgi.py
hiking_trails_map/: apps.py  functions.py  urls.py  views.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/css/: base.f5275bd00c87.css
templates/: add_trail_form.html  base.html  documentation.html  hikers.html  hiking_trails_map.html  login.html  puppy_pic_list.html  register.html  trail_update.html
