[tool.poetry]
name = "Hiking Trails API"
version = "0.2.0"
description = ""
authors = ["Thomas-Basham <bashamtg@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9.13"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
